Add meta data for seo

--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/images/logofavicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <meta name="keywords"
+    content="Nitin Gumber, Padampur Rajasthan, web designer, graphic designer, Full Stack Developer, Web Developer, Nextjs, MERN stack, MongoDB, Express.js, React.js, Node.js, React Query, portfolio, design projects, Web Development, Creative Solutions, TailwindCSS, Responsive Solutions">
+  <meta name="author" content="Nitin Gumber">
+  <meta name="robots" content="index, follow" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="" />
+  <meta property="og:title" content="Nitin Gumber - Full-Stack Web Developer Portfolio" />
+  <meta property="og:description"
+    content="Visit Nitin Gumber's portfolio to discover his expertise in full-stack web development using MERN stack (MongoDB, Express, React, Node.js). Specializing in responsive web design, UI/UX design, and innovative digital solutions." />
+  <meta property="og:image" content="./src/assets/images/image.ico" />
+
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="./src/assets/images/image.ico" />
+  <meta property="twitter:title" content="Nitin Gumber - Full-Stack Web Developer Portfolio" />
+  <meta property="twitter:description"
+    content="Explore Nitin Gumber's full-stack web development portfolio. Specializing in MERN stack (MongoDB, Express, React, Node.js) and UI/UX design, showcasing dynamic, responsive websites and creative digital solutions." />
+
+  <meta property="twitter:image" content="./src/assets/images/image.ico" />
+  <meta name="description"
+    content="Explore Nitin Gumber's portfolio of full-stack web development projects built with the MERN stack (MongoDB, Express, React, Node.js). Showcasing custom web solutions and UI/UX design expertise." />
+
+
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +35,7 @@
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
 
-  <title>Vite + React</title>
+  <title>Nitin Gumber - Web Developer Portfolio - Nitin Gumber</title>
 </head>
 
 <body>
