change title and meta image & add timing after send success message & update anchor links

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   <meta property="og:title" content="Nitin Gumber - Full-Stack Web Developer Portfolio" />
   <meta property="og:description"
     content="Visit Nitin Gumber's portfolio to discover his expertise in full-stack web development using MERN stack (MongoDB, Express, React, Node.js). Specializing in responsive web design, UI/UX design, and innovative digital solutions." />
-  <meta property="og:image" content="./src/assets/images/image.ico" />
+  <meta property="og:image" content="/og-image.webp" />
 
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="./src/assets/images/image.ico" />
+  <meta property="twitter:url" content="/og-image.webp" />
   <meta property="twitter:title" content="Nitin Gumber - Full-Stack Web Developer Portfolio" />
   <meta property="twitter:description"
     content="Explore Nitin Gumber's full-stack web development portfolio. Specializing in MERN stack (MongoDB, Express, React, Node.js) and UI/UX design, showcasing dynamic, responsive websites and creative digital solutions." />
 
-  <meta property="twitter:image" content="./src/assets/images/image.ico" />
+  <meta property="twitter:image" content="/og-image.webp" />
   <meta name="description"
     content="Explore Nitin Gumber's portfolio of full-stack web development projects built with the MERN stack (MongoDB, Express, React, Node.js). Showcasing custom web solutions and UI/UX design expertise." />
 
@@ -35,7 +35,7 @@
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
 
-  <title>Nitin Gumber - Web Developer Portfolio - Nitin Gumber</title>
+  <title>Nitin Gumber - Full Stack Web Development</title>
 </head>
 
 <body>
